fix(sidenav): top gap async, styling for inserting page

--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -31,8 +31,4 @@ $light-config: theming.get-color-config(custom-theming.$light-theme);
   z-index: 2;
 }
 
-.sidenav-container {
-  height: 100%;
-}
-
 // @include colors(theming.get-color-config($config-or-theme));
